tests/sksl/errors/golden/OpaqueTypeInArray.glsl
### Compilation failed:

error: 1: opaque type 'sampler' may not be used in an array
error: 2: opaque type 'sampler' may not be used in an array
2 errors
